--- a/index.html
+++ b/index.html
@@ -617,6 +617,14 @@
               Send Message
             </button>
           </form>
+          <div class="wrapper">
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="shadow"></div>
+            <div class="shadow"></div>
+            <div class="shadow"></div>
+        </div>
         </div>
       </section>
 
