--- a/index.html
+++ b/index.html
@@ -536,10 +536,11 @@
             <h2 class="services__title">Web Developer</h2>
 
             <p class="services__description">
-              Development of custom web pages.<br />
-              Using current technologies and <br />
-              libraries of the labor field.
+              Reating the digital tapestry of the internet<br />
+              one line of code at a time. <br />
+              
             </p>
+
           </article>
 
           <article class="services__card">
@@ -548,22 +549,25 @@
             <h2 class="services__title">Mobile Developer</h2>
 
             <p class="services__description">
-              Development of custom web pages.<br />
-              Using current technologies and<br />
-              libraries of the labor field.
+              Crafting sleek and seamless experiences<br />
+              for your pocket-sized companions.<br />
             </p>
           </article>
 
           <article class="services__card">
             <i class="ri-database-2-fill services__icon"></i>
 
-            <h2 class="services__title">Data Base</h2>
+            <h2 class="services__title">DataBase</h2>
 
             <p class="services__description">
-              Development of custom web pages.<br />
-              Using current technologies and<br />
-              libraries of the labor field.
+              Architecting the data realms<br />
+              where information reigns supreme<br />
+              and the ensurence of an end to end point is secure.
             </p>
+            
+
+
+
           </article>
         </div>
       </section>
