--- a/index.html
+++ b/index.html
@@ -429,13 +429,14 @@
                   />
                 </div>
                 <div class="card__content">
-                  <span class="card_title">Project 1</span>
+                  <span class="card_title">Weather Cast</span>
                   <p class="card__text">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Ipsam dolorem totam eum voluptatum animi delectus
-                    necessitatibus perferendis iure!
+                    Welcome to Weather Cast your sunny source for weather updates! From daily forecasts to weekend outlooks, 
+                    we've got your back. Clear skies or stormy weather, 
+                    stay ahead with us andmaking every day a breeze!
+                    
                   </p>
-                  <button class="card__btn">More</button>
+                  <button class="card__btn" onclick="redirectToAnotherWebsite('https://weather-cast-show.netlify.app/')">More</button>
                 </div>
               </div>
 
@@ -454,7 +455,7 @@
                     Ipsam dolorem totam eum voluptatum animi delectus
                     necessitatibus perferendis iure!
                   </p>
-                  <button class="card__btn">More</button>
+                  <button class="card__btn" onclick="redirectToAnotherWebsite('https://example2.com')">More</button>
                 </div>
               </div>
               <!-- Project Card 3 -->
@@ -472,7 +473,7 @@
                     Ipsam dolorem totam eum voluptatum animi delectus
                     necessitatibus perferendis iure!
                   </p>
-                  <button class="card__btn">More</button>
+                  <button class="card__btn" onclick="redirectToAnotherWebsite('https://example2.com')">More</button>
                 </div>
               </div>
               <!-- Project Card 4 -->
@@ -490,7 +491,7 @@
                     Ipsam dolorem totam eum voluptatum animi delectus
                     necessitatibus perferendis iure!
                   </p>
-                  <button class="card__btn">More</button>
+                  <button class="card__btn" onclick="redirectToAnotherWebsite('https://example2.com')">More</button>
                 </div>
               </div>
 
@@ -509,7 +510,7 @@
                     Ipsam dolorem totam eum voluptatum animi delectus
                     necessitatibus perferendis iure!
                   </p>
-                  <button class="card__btn">More</button>
+                  <button class="card__btn" onclick="redirectToAnotherWebsite('https://example2.com')">More</button>
                 </div>
               </div>
 
