--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
                   <p class="card__text">
                     Welcome to Weather Cast your sunny source for weather updates! From daily forecasts to weekend outlooks, 
                     we've got your back. Clear skies or stormy weather, 
-                    stay ahead with us andmaking every day a breeze!
+                    stay ahead with us and make every day a breeze!
                     
                   </p>
                   <button class="card__btn" onclick="redirectToAnotherWebsite('https://weather-cast-show.netlify.app/')">More</button>
