--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
             <div class="home__social">
               <a
-                href="https://www.instagram.com/"
+                href="https://www.instagram.com/_rvmiguel_/"
                 target="_blank"
                 rel="noopener noreferrer"
                 class="home__social-link"
@@ -186,7 +186,7 @@
               </a>
 
               <a
-                href="https://www.linkedin.com/"
+                href="https:https://www.linkedin.com/in/rui-seca/"
                 target="_blank"
                 rel="noopener noreferrer"
                 class="home__social-link"
@@ -195,7 +195,7 @@
               </a>
 
               <a
-                href="https://github.com/"
+                href="https://github.com/RuiSeca"
                 target="_blank"
                 rel="noopener noreferrer"
                 class="home__social-link"
@@ -664,7 +664,7 @@
 
         <div class="footer__social">
           <a
-            href="https://www.instagram.com/"
+            href="https://www.instagram.com/_rvmiguel_/"
             target="_blank"
             rel="noopener noreferrer"
             class="footer__social-link"
@@ -673,7 +673,7 @@
           </a>
 
           <a
-            href="https://www.linkedin.com/"
+            href="https:https://www.linkedin.com/in/rui-seca/"
             target="_blank"
             rel="noopener noreferrer"
             class="footer__social-link"
@@ -682,7 +682,7 @@
           </a>
 
           <a
-            href="https://github.com/"
+            href="https://github.com/RuiSeca"
             target="_blank"
             rel="noopener noreferrer"
             class="footer__social-link"
