--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
               </a>
 
               <a
-                href="https:https://www.linkedin.com/in/rui-seca/"
+                href="https://www.linkedin.com/in/rui-seca/"
                 target="_blank"
                 rel="noopener noreferrer"
                 class="home__social-link"
@@ -673,7 +673,7 @@
           </a>
 
           <a
-            href="https:https://www.linkedin.com/in/rui-seca/"
+            href="https://www.linkedin.com/in/rui-seca/"
             target="_blank"
             rel="noopener noreferrer"
             class="footer__social-link"
