--- a/index.html
+++ b/index.html
@@ -171,8 +171,29 @@
                 Whenever there is a challenge, I am here to program a solution.
               </p>
 
-              <a href="/assets/docs/CV-Rui_Seca.pdf" class="button" download>Download CV</a>
-
+              <label class="label">
+                <input type="checkbox" class="input" onclick="handleDownload()" />
+                <span class="installer-btn">
+                  <svg
+                    class="icon"
+                    aria-hidden="true"
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                  >
+                    <path
+                      stroke="currentColor"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="1.5"
+                      d="M12 19V5m0 14-4-4m4 4 4-4"
+                    ></path>
+                  </svg>
+                  <div class="square"></div>
+                </span>
+                <p class="title">Curriculum</p>
+                <p class="title">Open</p>
+              </label>
             </div>
 
             <div class="home__social">
