--- a/index.html
+++ b/index.html
@@ -171,9 +171,8 @@
                 Whenever there is a challenge, I am here to program a solution.
               </p>
 
-              <label class="label">
-                <input type="checkbox" class="input" onclick="handleDownload()" />
-                <span class="installer-btn">
+              <label class="label" id="download-label">
+                <button class="installer-btn" onclick="handleDownload()">
                   <svg
                     class="icon"
                     aria-hidden="true"
@@ -190,9 +189,8 @@
                     ></path>
                   </svg>
                   <div class="square"></div>
-                </span>
+                </button>
                 <p class="title">Curriculum</p>
-                <p class="title">Open</p>
               </label>
             </div>
 
