--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                   </svg>
                   <div class="square"></div>
                 </button>
-                <p class="title">Curriculum</p>
+                <p class="title">Download CV</p>
               </label>
             </div>
 
